@@ -42,6 +42,7 @@
             Allow flash writes *from* unaligned addresses on nRF52 and ESP8266 (previously this crashed the ESP8266)
             Update process.ENV.EXPORTS to bring it in line with what the compiler uses
             Now set 'this' correctly for Arrow Functions
+            Add ES6 classes and 'super'
   
      1v95 : nRF5x: Swap to UART fifo to avoid overrun errors at high baud rates
             Ensure Exceptions/errors are reported on a blank line
